--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,9 @@ main section.col2 .img4{
     main section {
         width: 350px;
     }
+    main section.col1{
+        height: 90vh;
+    }
     main section.col2 .row{
         display: flex;
         flex-direction: column;
